--- a/gay.html
+++ b/gay.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <h1>dumbass</h1>
-    <p>i hi </p>
-    <h1> guozilla is a dumbass</h1>
+</hea
 </body>
 </html>
